# SecurityDesk

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
.cursor/rules/: auto-push-github.mdc
.github/workflows/: ci.yml  desktop-release.yml
apps/agent/: package.json
apps/agent/src/: cli.ts
apps/desktop/: .gitignore  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: app.tsx  main.tsx  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src/components/: login-page.tsx  module-placeholder.tsx  shell.tsx  (+1 more)
apps/web/: next.config.ts  package.json  tailwind.config.ts  vercel.json
apps/web/src/: middleware.ts
docs/: ADDING_INTEGRATIONS.md  AGENT_INSTALLATION.md  ARCHITECTURE.md  BACKUP_AND_RESTORE.md  DECISIONS.md  DEPLOYMENT_VERCEL.md  DESKTOP_ARCHITECTURE.md  DESKTOP_ARCHITECTURE_PLAN.md  DESKTOP_BUILD_LINUX.md  DESKTOP_BUILD_MACOS.md  DESKTOP_BUILD_WINDOWS.md  DESKTOP_DEVELOPMENT.md  DESKTOP_FINAL_REPORT.md  DESKTOP_RELEASES.md  DESKTOP_SECURITY.md  DESKTOP_SIGNING.md  DESKTOP_TROUBLESHOOTING.md  DESKTOP_UPDATER.md  ENVIRONMENT_VARIABLES.md  EXTERNAL_DATABASE.md  FLOORPLAN_DIGITAL_TWIN.md  LOCAL_DEVELOPMENT.md  PARTS_AND_INVENTORY.md  SECURITY.md  TROUBLESHOOTING.md
scripts/: set-desktop-version.mjs  setup.mjs  test-database.mjs
(+191 files in other folders)
